Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/New_Offer_Section__c.object-meta.xml
<CustomObject>
    <description>We are using this as an alternative to the OpportunityLineItem. Data is created as soon as new project is inserted or edited. Data is calculated on the basis of ProbabilityMaster__c object</description>
    <label>New Offer Section</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Offer Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>