Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/Additional_Disc_on_APPL_disc__c.field-meta.xml
<CustomField>
    <fullName>Additional_Disc_on_APPL_disc__c</fullName>
    <description>Additional discount on the APPL discount. A number field but if want to use it then consider this as a percent field. This field is used in the project level to calculate the average discount that has been provided under a particular project</description>
    <formula>((MRP_Post_Discount__c -  Net_Invoice_Value_from_APPL__c ) /  MRP_Post_Discount__c)*100</formula>
    <label>Additional Disc on APPL disc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>