Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/APPL__c.field-meta.xml
<CustomField>
    <fullName>APPL__c</fullName>
    <description>APPL Discount is based on the discount in different states</description>
    <label>APPL Discount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>