Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/CTC__c.field-meta.xml
<CustomField>
    <fullName>CTC__c</fullName>
    <description>CTC value</description>
    <formula>( (MRP_Value__c - Net_Invoice_Value_from_APPL__c ) / MRP_Value__c)</formula>
    <label>CTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>