Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/Delivery_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Schedule__c</fullName>
    <label>Delivery Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Qty</fullName>
            </value>
            <value>
                <fullName>1 LOT</fullName>
            </value>
            <value>
                <fullName>2 LOTS</fullName>
            </value>
            <value>
                <fullName>3 LOTS</fullName>
            </value>
            <value>
                <fullName>4 LOTS</fullName>
            </value>
            <value>
                <fullName>5 LOTS</fullName>
            </value>
            <value>
                <fullName>6 LOTS</fullName>
            </value>
            <value>
                <fullName>7 LOTS</fullName>
            </value>
            <value>
                <fullName>8 LOTS</fullName>
            </value>
            <value>
                <fullName>9 LOTS</fullName>
            </value>
            <value>
                <fullName>10 LOTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>