Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Price__c</fullName>
    <description>the discounted value after extra discount is given to the customer</description>
    <formula>IF( ISBLANK(Extra_Discount__c),
     MRP_Post_Discount__c ,
    ABS( (MRP_Value__c) - ( Extra_Discount__c * MRP_Value__c)))</formula>
    <label>Discounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>