Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>New Offer Sections</relationshipLabel>
    <relationshipName>New_Offer_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>