Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/MRP_Post_Discount__c.field-meta.xml
<CustomField>
    <fullName>MRP_Post_Discount__c</fullName>
    <formula>(MRP_Value__c)-( APPL__c * MRP_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRP Post Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>