Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/Net_Invoice_Value_from_APPL__c.field-meta.xml
<CustomField>
    <fullName>Net_Invoice_Value_from_APPL__c</fullName>
    <description>This the calculated from the given orc %</description>
    <formula>If( ISBLANK(ORC_MARGIN_TO_DLR_DIST__c ), Discounted_Price__c , ABS(((100 - (ORC_MARGIN_TO_DLR_DIST__c * 100))/100) *  Discounted_Price__c))</formula>
    <label>Net Invoice Value from APPL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>