Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/NET_Invoice_Value_to_Distributer__c.field-meta.xml
<CustomField>
    <fullName>NET_Invoice_Value_to_Distributer__c</fullName>
    <formula>Discounted_Price__c -  ORC_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NET Invoice Value to Distributer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>