Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/ORC_Value__c.field-meta.xml
<CustomField>
    <fullName>ORC_Value__c</fullName>
    <formula>Discounted_Price__c * ORC_MARGIN_TO_DLR_DIST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ORC Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>