Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/Others_Lost_Sales__c.field-meta.xml
<CustomField>
    <fullName>Others_Lost_Sales__c</fullName>
    <description>This field is mandatory if the reason of lost sales chosen is empty</description>
    <inlineHelpText>This field is mandatory if the reason of lost sales chosen is empty</inlineHelpText>
    <label>Others</label>
    <length>255</length>
    <type>Text</type>
</CustomField>