Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/Payment_terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_terms__c</fullName>
    <label>Payment terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20% advance with PO</fullName>
            </value>
            <value>
                <fullName>30 Days credit with PO</fullName>
            </value>
            <value>
                <fullName>90 Days credit with PO</fullName>
            </value>
            <value>
                <fullName>100% Payment against Delivery</fullName>
            </value>
            <value>
                <fullName>45 days after delivery</fullName>
            </value>
            <value>
                <fullName>60 days after delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>