Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/Previous_Extra_Discount__c.field-meta.xml
<CustomField>
    <fullName>Previous_Extra_Discount__c</fullName>
    <description>Previous extra discount field updated by workflow whenever the approval status is changed to approved or rejected. put the previous value of extra discount field to Previous_Extra_Discount__c</description>
    <label>Previous Extra Discount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>