Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Name of the product</description>
    <inlineHelpText>Name of the product</inlineHelpText>
    <label>Product Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>