Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/Product_Specified__c.field-meta.xml
<CustomField>
    <fullName>Product_Specified__c</fullName>
    <label>Product Specified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Specified</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Specification Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>