Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/Product_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Value__c</fullName>
    <label>Product Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>