Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>New Offer Sections</relationshipLabel>
    <relationshipName>New_Offer_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>