Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/Send_for_SPR__c.field-meta.xml
<CustomField>
    <fullName>Send_for_SPR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is true and the Extra discount field is not equal to null then an approval will go to the manager</description>
    <label>Send for SPR</label>
    <type>Checkbox</type>
</CustomField>