Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/Tentative_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Order_Date__c</fullName>
    <label>Tentative Order Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jan 16</fullName>
            </value>
            <value>
                <fullName>Feb 16</fullName>
            </value>
            <value>
                <fullName>Mar 16</fullName>
            </value>
            <value>
                <fullName>Apr 16</fullName>
            </value>
            <value>
                <fullName>May 16</fullName>
            </value>
            <value>
                <fullName>Jun 16</fullName>
            </value>
            <value>
                <fullName>Jul 16</fullName>
            </value>
            <value>
                <fullName>Aug 16</fullName>
            </value>
            <value>
                <fullName>Sept 16</fullName>
            </value>
            <value>
                <fullName>Oct 16</fullName>
            </value>
            <value>
                <fullName>Nov 16</fullName>
            </value>
            <value>
                <fullName>Dec 16</fullName>
            </value>
            <value>
                <fullName>Jan 17</fullName>
            </value>
            <value>
                <fullName>Feb 17</fullName>
            </value>
            <value>
                <fullName>Mar 17</fullName>
            </value>
            <value>
                <fullName>Apr 17</fullName>
            </value>
            <value>
                <fullName>May 17</fullName>
            </value>
            <value>
                <fullName>Jun 17</fullName>
            </value>
            <value>
                <fullName>Jul 17</fullName>
            </value>
            <value>
                <fullName>Aug 17</fullName>
            </value>
            <value>
                <fullName>Sept 17</fullName>
            </value>
            <value>
                <fullName>Oct 17</fullName>
            </value>
            <value>
                <fullName>Nov 17</fullName>
            </value>
            <value>
                <fullName>Dec 17</fullName>
            </value>
            <value>
                <fullName>Jan 18</fullName>
            </value>
            <value>
                <fullName>Feb 18</fullName>
            </value>
            <value>
                <fullName>Mar 18</fullName>
            </value>
            <value>
                <fullName>Apr 18</fullName>
            </value>
            <value>
                <fullName>May 18</fullName>
            </value>
            <value>
                <fullName>Jun 18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>