Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/fields/Validity_for_the_Price__c.field-meta.xml
<CustomField>
    <fullName>Validity_for_the_Price__c</fullName>
    <defaultValue>TODAY() + 30</defaultValue>
    <label>Validity for the Price</label>
    <type>Date</type>
</CustomField>