Partial_14Dec2021/force-app/main/default/objects/New_Offer_Section__c/validationRules/ORC_limitation_for_retail_team.validationRule-meta.xml
<ValidationRule>
    <fullName>ORC_limitation_for_retail_team</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CreatedBy.Intial_Project_Approver__r.Alias=&apos;prakash.&apos;, CreatedBy.Project_Approver__r.Alias =&apos;prakash.&apos;,  ORC_MARGIN_TO_DLR_DIST__c&gt;0.05,DATEVALUE(CreatedDate) &gt;= DATE(2020,08,21) )</errorConditionFormula>
    <errorMessage>ORC can&apos;t be more than 5%..!</errorMessage>
</ValidationRule>